# esercitazioni_PCS_2025-26

eser1/: CMakeLists.txt  media.cpp  printargs.cpp
eser2/: CMakeLists.txt  alg_uno.cpp  es2_pos_memoria.cpp
eser3/: CMakeLists.txt  rational.cpp  rational.hpp
eser4/: CMakeLists.txt  PCS_ES4.m  esempio_grafico.fig  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
